fixed recursion page and others layout